--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,19 @@
     <groupId>com.thinking</groupId>
     <artifactId>data-analysis</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <properties>
-        <storm.version>0.8.2</storm.version>
+        <storm.version>1.2.1</storm.version>
         <lombok.version>1.16.20</lombok.version>
-        <log4j.version>2.11.0</log4j.version>
+        <log4j.version>2.10.0</log4j.version>
         <junit.version>4.12</junit.version>
         <slf4j.version>1.7.25</slf4j.version>
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/storm/storm -->
         <dependency>
-            <groupId>storm</groupId>
-            <artifactId>storm</artifactId>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-core</artifactId>
             <version>${storm.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -27,7 +27,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -55,9 +54,14 @@
             <version>${log4j.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
-            <version>3.3.0</version>
+            <version>3.3.7</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
