--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <log4j.version>2.10.0</log4j.version>
         <junit.version>4.12</junit.version>
         <slf4j.version>1.7.25</slf4j.version>
+        <hikari.version>2.4.3</hikari.version>
     </properties>
 
     <dependencies>
@@ -28,6 +29,17 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.42</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-jdbc</artifactId>
+            <version>${storm.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
